# llm_opensource

./: .dockerignore  .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  qodana_code_quality.yml
.run/: Cloud Run_ Deploy.run.xml  Flask (app.py).run.xml
llm_opensource/: __init__.py
src/services/demo_test/controllers/: ollama_api_demo.py
src/services/demo_test/models/: demo_test_api_schema.py
src/settings/: configs.py  extensions.py  init_app.py  urls.py
