[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_opensource"
version = "0.1.0"
description = "A project for LLM open source"
requires-python = ">=3.12"
dependencies = [
    "Flask==2.3.3",
    "requests==2.31.0",
    "debugpy",
    "langchain==0.3.15",
    "langchain-ollama==0.2.2",
    "flask-apispec==0.11.4",
    "flask-restful==0.3.10",
    "marshmallow==3.23.1",
    "langsmith==0.2.3",
    "apispec==6.8.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.scripts]
llm_opensource-cli = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"src" = ["data/*.csv"]

[tool.check-manifest]
ignore = ["*.md", "docs/**"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
